@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: common_options.txt,v 1.13 2008-05-23 19:59:52 guru Exp $
+ *	$Id: common_options.txt,v 1.14 2008-10-10 21:42:53 guru Exp $
  *
  *	Copyright (c) 1991-2008 by P. Wessel and W. H. F. Smith
  *	See COPYING file for copying and redistribution conditions.
@@ -64,7 +64,7 @@
 
 /* Options for map rose and scale, used in pscoast and psbasemap */
 #define GMT_TROSE	OPT(T)[\fBf\fP|\fBm\fP][\fBx\fP]\fIlon0\fP/\fIlat0\fP/\fIsize\fP[/\fIinfo\fP][:w,e,s,n:][+\fIgint\fP[/\fImint\fP]]
-#define GMT_SCALE	OPT(L)[\fBf\fP][\fBx\fP]\fIlon0\fP/\fIlat0\fP[/\fIslon\fP]/\fIslat\fP/\fIlength\fP[\fBm\fP|\fBn\fP|\fBk\fP][:\fIlabel\fP:\fIjust\fP][\fB+p\fP\fIpen\fP][\fB+f\fP\fIfill\fP] ]
+#define GMT_SCALE	OPT(L)[\fBf\fP][\fBx\fP]\fIlon0\fP/\fIlat0\fP[/\fIslon\fP]/\fIslat\fP/\fIlength\fP[\fBm\fP|\fBn\fP|\fBk\fP][\fB+l\fP\fIlabel\fP][\fB+j\fP\fIjust\fP][\fB+p\fP\fIpen\fP][\fB+f\fP\fIfill\fP][\fB+u\fP] ]
 
 /* OPtions for pseudo perspective views */
 #define GMT_E_OPT	OPT(E)\fIazim\fP/\fIelev\fP[\fB+w\fP\fIlon\fP/\fIlat\fP[/\fIz\fP]][\fB+v\fP\fIx0\fP/\fIy0\fP]
