@@ -4,8 +4,8 @@ Draws a simple map scale centered on \fIlon0/lat0\fP.  Use \fB\-Lx\fP to specify
 Scale is calculated at latitude \fIslat\fP (optionally supply longitude \fIslon\fP for oblique projections
 [Default is central meridian]), \fIlength\fP is in km [miles if \fBm\fP is appended; nautical miles
 if \fBn\fP is appended]. Use \fB\-Lf\fP to get a "fancy" scale [Default is plain]. Append \fB+l\fP to
-select the default label which equals the distance unit (km, miles, nautical miles) and is justified on top of the scale [t].  Change this by giving your
-own label (append \fB+l\fP\fIlabel\fP).  Change label justification with \fB+j\fP\fIjustification\fP (choose among l(eft), r(ight),
-t(op), and b(ottom)).  Apply \fB+u\fP to append the unit to all distance annotations along the scale. 
+select the default label which equals the distance unit (km, miles, nautical miles) and is justified on top of the scale [t].
+Change this by giving your own label (append \fB+l\fP\fIlabel\fP).  Change label justification with \fB+j\fP\fIjustification\fP
+(choose among l(eft), r(ight), t(op), and b(ottom)).  Apply \fB+u\fP to append the unit to all distance annotations along the scale. 
 If you want to place a rectangle behind the scale, specify suitable \fB+p\fP\fIpen\fP and/or \fB+f\fP\fIfill\fP parameters.
 (See SPECIFYING PENS and SPECIFYING FILL below).
